<resources>
    <string name="app_name">Peliculas</string>
    <string name="detalle_pelicula">Detalle de pelicula</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="problema_servicio">Problema con la conexión</string>
    <string name="ver_por">Ver por</string>
    <string name="nombre">Nombre</string>
    <string name="problema_de_conexion">Problema de Conexión</string>
    <string name="descripcion">Descripción:</string>
    <string name="informacion_pelicula">Información de la Película</string>
    <string name="tipo">Tipo:</string>
    <string name="fecha_de_lanzamiento">Fecha de lanzamiento:</string>
    <string name="clasificacion">Clasificación:</string>
    <string name="idioma">Idioma:</string>
</resources>