<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.peliculas.ui.main.view.activities.detalle_movie.DetalleMovieActivity">

    <data>
        <import type="android.view.View"/>
        <variable
            name="viewModel"
            type="com.example.peliculas.ui.main.view.activities.movie_list.viewmodel.MovieViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:visibility="gone" />

            <TextView
                android:id="@+id/txt_error"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/problema_de_conexion"
                android:textColor="@android:color/holo_red_dark"
                android:visibility="gone" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="520dp"

                            android:orientation="vertical"
                            android:padding="10dp">

                            <ImageView
                                android:id="@+id/iv_movie_poster"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_gravity="center_horizontal"
                                android:scaleType="centerCrop"
                                android:src="@drawable/ic_local_movies_black_24dp" />

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>


                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="10dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="10dp"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/movie_title"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="@dimen/M16dp"
                                android:gravity="center"
                                android:textSize="23sp"
                                android:textStyle="bold" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/descripcion"
                                    android:textSize="14sp"
                                    android:textStyle="bold" />

                                <LinearLayout
                                    android:id="@+id/inset_web_view"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:orientation="vertical">

                                    <TextView
                                        android:id="@+id/movie_overview"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:justificationMode="inter_word"
                                        android:padding="5dp"
                                        android:textSize="14sp"
                                        android:textStyle="bold" />
                                </LinearLayout>


                            </LinearLayout>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/M8dp"
                                android:layout_marginBottom="@dimen/M16dp"
                                android:text="@string/informacion_pelicula"
                                android:textColor="@android:color/holo_blue_dark"
                                android:textSize="16sp"
                                android:textStyle="bold" />

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">

                                <TextView

                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/tipo"
                                    android:textSize="15sp"
                                    android:textStyle="bold" />

                                <TextView
                                    android:id="@+id/movie_type"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textSize="15sp"
                                    android:textStyle="bold" />

                            </LinearLayout>


                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"

                                    android:text="@string/fecha_de_lanzamiento"
                                    android:textSize="14sp"
                                    android:textStyle="bold" />

                                <TextView
                                    android:id="@+id/movie_release_date"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"

                                    android:textSize="14sp"
                                    android:textStyle="bold" />
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/clasificacion"
                                    android:textSize="14sp"
                                    android:textStyle="bold" />

                                <TextView
                                    android:id="@+id/movie_rating"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textSize="14sp"
                                    android:textStyle="bold" />
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/idioma"
                                    android:textSize="14sp"
                                    android:textStyle="bold" />

                                <TextView
                                    android:id="@+id/movie_language"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textSize="14sp"
                                    android:textStyle="bold" />
                            </LinearLayout>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                </LinearLayout>
            </ScrollView>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>